--- a/3D-arhitektura-hale.html
+++ b/3D-arhitektura-hale.html
@@ -87,7 +87,7 @@
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
         <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-            <h2>3D arhitektura hale</h2>
+            <h2>Čelična hala - 3D arhitektonsko oblikovanje</h2>
             <ol>
                 <li><a href="index.html">Početna stranica</a></li>
                 <li><a href="projekti.html">Projekti</a></li>
@@ -216,6 +216,7 @@
             <div class="copyright">
                 <p>info.vbinzenjering@gmail.com</p>
                 <p>064/217-5474</p>
+                <p>065/626-408</p>
                 <p>Beograd, Srbija</p>
 
                 <strong><span>VB Inženjering, 2025.</span></strong>
