--- a/betonske-konstrukcije.html
+++ b/betonske-konstrukcije.html
@@ -102,6 +102,10 @@
     <section id="project-details" class="project-details">
         <div class="container" data-aos="fade-up" data-aos-delay="100">
 
+            <div>
+                    <h2>Konstrukcija za budućnost – stambene zgrade od armiranog betona</h2><br>
+            </div>
+
             <div class="position-relative h-100">
                 <div class="slides-1 portfolio-details-slider swiper">
                     <div class="swiper-wrapper align-items-center">
@@ -121,16 +125,48 @@
                 <div class="swiper-button-next"></div>
             </div>
 
+
+
             <div class="row justify-content-between gy-4 mt-4">
                     <div class="portfolio-description">
-                        <h2>Konstrukcija za budućnost – stambene zgrade od armiranog betona</h2>
+<!--                        <h2>Konstrukcija za budućnost – stambene zgrade od armiranog betona</h2>-->
                         <p>
-                            Pregledajte naš portfolio projekata stambenih zgrada izrađenih od betona. Pored izgradnje prikazanih projekata nudimo i mogućnost izgradnje potpuno novih objekata, prilagođenih vašim specifičnim potrebama, lokaciji i viziji.
-                        </p>
-                        <p>
-                            Betonske konstrukcije koje mi gradimo <strong>zadržavaju svoju vrednost kroz vreme</strong>, ne podležu deformacijama, vlagi ili štetočinama. Za vas kao investitore i vlasnike stanova, to znači manji rizik i veći povraćaj ulaganja.
+                            Na slikama iznad možete videti referentni projekat iz naše realizacije – savremenu stambenu zgradu sa podrumom, prizemljem i tri sprata. Arhitektonsko rešenje odlikuje se modernim minimalističkim dizajnom, fasadom u imitaciji betona, drvenim detaljima i staklenim ogradama, što objektu daje poseban karakter i eleganciju. Prostrane terase i velike staklene površine obezbeđuju udobnost, svetlost i funkcionalnost, dok uređen okoliš dodatno naglašava kvalitet i estetiku celog kompleksa.
                         </p>
                     </div>
+            </div>
+
+
+
+            <br>
+            <div class="position-relative h-100">
+                <div class="slides-1 portfolio-details-slider swiper">
+                    <div class="swiper-wrapper align-items-center">
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/betonski/10.webp" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/betonski/11.webp" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="assets/img/projects/betonski/12.webp" alt="Trospratna moderna stambena zgrada minimalističkog dizajna, sa balkonima i okružena drvećem. ">
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+
+            <div class="row justify-content-between gy-4 mt-4">
+                <div class="portfolio-description">
+                    <p>
+                        Referentni projekat iz naše realizacije, prikazan na slikama iznad je savremena stambena zgrada sa podrumom, prizemljem, tri sprata i potkrovljem, modernog dizajna sa svetlim tonovima, drvenim oblogama i velikim staklenim površinama, koja objedinjuje funkcionalnost, udobnost i estetsku vrednost u mirnom okruženju.
+                    </p>
+                    <p>
+                        U nastavku vam predstavljamo kolekciju još naših stambenih zgrada i objekata sa naglaskom na funkcionalnost, estetiku i udobnost stanovanja. Pored izgradnje prikazanih projekata nudimo i mogućnost izgradnje potpuno novih objekata, prilagođenih vašim specifičnim potrebama, lokaciji i viziji. Betonske konstrukcije koje mi gradimo <strong>zadržavaju svoju vrednost kroz vreme</strong>, ne podležu deformacijama, vlagi ili štetočinama. Za vas kao investitore i vlasnike stanova, to znači manji rizik i veći povraćaj ulaganja.
+                    </p>
+                </div>
             </div>
 
             <br>
@@ -157,37 +193,11 @@
                     <p>
                         Zgrade smo projektovali da zadovolje visoke standarde konstrukcijske sigurnosti i energetske efikasnosti uz <strong>savremeni arhitektonski izraz</strong>. Prilagođene su urbanom okruženju sa jasno definisanim stambenim jedinicama. Konstrukcija se oslanja na robustan sistem betonskih elemenata koji obezbeđuju dugotrajnost i nosivost.
                     </p>
-                </div>
-            </div>
-
-            <br>
-            <div class="position-relative h-100">
-                <div class="slides-1 portfolio-details-slider swiper">
-                    <div class="swiper-wrapper align-items-center">
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/betonski/10.webp" alt="">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/betonski/11.webp" alt="">
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="assets/img/projects/betonski/12.webp" alt="Trospratna moderna stambena zgrada minimalističkog dizajna, sa balkonima i okružena drvećem. ">
-                        </div>
-                    </div>
-                    <div class="swiper-pagination"></div>
-                </div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-            </div>
-
-            <div class="row justify-content-between gy-4 mt-4">
-                <div class="portfolio-description">
                     <p>
                         Beton je poznat po svojoj izdržljivosti. Otporan je na vremenske uslove, vlagu i habanje, omogućava decenije pouzdane upotrebe uz minimalne troškove održavanja. Beton ima sposobnost da akumulira toplotu i postepeno je oslobađa, čime doprinosi stabilnijoj unutrašnjoj mikroklimi. U kombinaciji sa kvalitetnom izolacijom, stanovi u betonskim zgradama pružaju prijatan ambijent tokom cele godine. Korišćenjem lokalnih materijala i održivih građevinskih praksi, betonske konstrukcije mogu imati smanjen ekološki otisak, uz mogućnost reciklaže i ponovne upotrebe.
                     </p>
                 </div>
             </div>
-
             <br>
             <div class="position-relative h-100">
                 <div class="slides-1 portfolio-details-slider swiper">
@@ -282,6 +292,7 @@
             <div class="copyright">
                 <p>info.vbinzenjering@gmail.com</p>
                 <p>064/217-5474</p>
+                <p>065/626-408</p>
                 <p>Beograd, Srbija</p>
 
                 <strong><span>VB Inženjering, 2025.</span></strong>
