--- a/index.html
+++ b/index.html
@@ -223,7 +223,9 @@
 
         <div class="section-header">
           <h2>Usluge</h2>
-          <p>Od inicijalne ideje do završnog projekta, pružamo sveobuhvatna rešenja prilagođena vašim potrebama. Detaljan pregled naših specijalnosti možete pronaći ispod.</p>
+          <p>Vaša vizija, naša stručnost. Od prvog nacrta do završnog detalja - arhitektura, konstrukcija, elektro, ViK i mašinske instalacije.
+            Sve faze projektovanja na jednom mestu.
+            Brzo, pouzdano i kvalitetno.</p>
         </div>
 
         <div class="row gy-4">
@@ -358,7 +360,7 @@
               <img src="assets/img/projects/hala1/4.jpg" class="img-fluid" alt="3D konstrukcija hale sa tamno sivim i narandžastim akcentima">
               <div class="portfolio-info">
                 <h4>Čelična hala</h4>
-                <p>3D arhitektura hale</p>
+                <p>Čelična hala - 3D arhitektonsko oblikovanje</p>
                 <a href="assets/img/projects/hala1/4.jpg"  data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="3D-arhitektura-hale.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -486,6 +488,7 @@
         <div class="copyright">
           <p>info.vbinzenjering@gmail.com</p>
           <p>064/217-5474</p>
+          <p>065/626-408</p>
           <p>Beograd, Srbija</p>
 
           <strong><span>VB Inženjering, 2025.</span></strong>
