--- a/projekti.html
+++ b/projekti.html
@@ -129,8 +129,8 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/projects/hala1/4.jpg" class="img-fluid" alt="3D konstrukcija hale sa tamno sivim i narandžastim akcentima">
                 <div class="portfolio-info">
-                  <h4>Hala 1</h4>
-                  <p>3D arhitektura hale</p>
+                  <h4>Hala</h4>
+                  <p>Čelična hala - 3D arhitektonsko oblikovanje</p>
                   <a href="assets/img/projects/hala1/4.jpg" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="3D-arhitektura-hale.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -141,8 +141,8 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" class="img-fluid" alt="3D Digitalni prikaz čelične zgrade sa jarko plavim, zelenim i narandžastim gredama.">
                 <div class="portfolio-info">
-                  <h4>Hala 2</h4>
-                  <p>3D konstrukcija hale</p>
+                  <h4>Hala</h4>
+                  <p>Čelična hala - 3D konstrukcijsko rešenje</p>
                   <a href="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" data-gallery="portfolio-gallery-celik" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="3D-konstrukcija-hale.html" title="Više detalja" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -290,6 +290,7 @@
         <div class="copyright">
           <p>info.vbinzenjering@gmail.com</p>
           <p>064/217-5474</p>
+          <p>065/626-408</p>
           <p>Beograd, Srbija</p>
 
           <strong><span>VB Inženjering, 2025.</span></strong>
